# webserver

./: CMakeLists.txt
Networking/: BindingSocket.cpp  BindingSocket.h  ConnectingSocket.cpp  ConnectingSocket.h  SimpleSocket.cpp  SimpleSocket.h  pgNetwork.h
Networking/Clients/: SimpleClient.cpp  SimpleClient.h  TestClient.cpp  TestClient.h  test.cpp
Networking/Servers/: SimpleServer.cpp  SimpleServer.h  TestServer.cpp  TestServer.h  test.cpp
Networking/Sockets/: BindingSocket.cpp  BindingSocket.h  ConnectingSocket.cpp  ConnectingSocket.h  ListeningSocket.cpp  ListeningSocket.h  SimpleSocket.cpp  SimpleSocket.h  main.cpp  pgSockets.h
